--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^5.3.4",
+    "react-toastify": "^10.0.5",
     "reactstrap": "^9.2.3"
   },
   "devDependencies": {
